--- a/index.html
+++ b/index.html
@@ -67,12 +67,20 @@
             contenido de la página se haya cargado antes de ejecutar el script.</p>
 
         <p>Si decides incluir el script en la parte inferior de tu documento HTML, debería verse así:</p>
-        <pre><code>
-    &lt;body&gt;
-        ...
-        &lt;script src="script.js"&gt;&lt;/script&gt;
-    &lt;/body&gt;
-    </code></pre>
+     <pre><code>
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;body&gt;
+
+&lt;h1&gt;Titulo&lt;/h1&gt;
+
+&lt;p&gt;Parrafo&lt;/p&gt;
+&lt;script src=&quot;script.js&quot;&gt;&lt;/script&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;
+</code></pre>
+
 
         <h3>Ejemplo de Código JavaScript en <code>script.js</code></h3>
         <pre><code>
