UPDATED INDEX WITH ALL

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- Sección: Hola Mundo en JavaScript -->
     <div class="box">
-        <h2>Configuración Inicial</h2>
+        <h2>1. INTRODUCCIÓN. Configuración Inicial</h2>
         <a href="https://www.w3schools.com/js/js_whereto.asp">Incluir Javascript en HTML</a>
         <p>Para comenzar a utilizar JavaScript, crea un archivo llamado <code>script.js</code> y luego inclúyelo en tu
             documento HTML utilizando la etiqueta <code>&lt;script&gt;</code>. Es recomendable colocar el enlace al
@@ -92,7 +92,7 @@
 
     <!-- Sección: Variables -->
     <div class="box">
-        <h2>Variables</h2>
+        <h2>2. VARIABLES</h2>
         <a href="https://www.w3schools.com/js/js_variables.asp">Variables</a>
         <p>Las variables son contenedores para almacenar datos. Pueden definirse con <code>let</code>, o
             <code>const</code> si es un valor que no va a cambiar.
@@ -139,7 +139,7 @@
 
     <!-- Sección: Operaciones básicas -->
     <div class="box">
-        <h2>Operaciones Básicas</h2>
+        <h2>3. OPERACIONES</h2>
         <a href="https://www.w3schools.com/js/js_operators.asp">Operaciones</a>
         <p>JavaScript permite realizar operaciones matemáticas como suma, resta, multiplicación y división.</p>
         <pre><code>let suma = 5 + 3;
@@ -167,7 +167,7 @@ let division = 6 / 3;</code></pre>
 
     <!-- Sección: Cadenas Básicas -->
     <div class="box">
-        <h2>Cadenas</h2>
+        <h2>4. CADENAS</h2>
         <a href="https://www.w3schools.com/js/js_string_methods.asp">Cadenas</a>
         <p>Las cadenas (strings) son textos. Puedes concatenarlas con el operador <code>+</code>.</p>
         <pre><code>let saludo = "Hola " + "mundo";
@@ -215,7 +215,7 @@ let minusculas = saludo.toLowerCase();
 
     <!-- Sección: Funciones sin parámetros y evento onclick -->
     <div class="box">
-        <h2>Funciones sin Parámetros y Evento onclick</h2>
+        <h2>5. FUNCIONES BASICAS. EVENTOS.</h2>
         <a href="https://www.w3schools.com/js/js_functions.asp">Funciones</a>
         <a href="https://www.w3schools.com/js/js_events.asp">Eventos</a>
         <p>Las funciones son bloques de código que se ejecutan cuando se les llama. Puedes usar eventos como
@@ -241,7 +241,7 @@ let minusculas = saludo.toLowerCase();
 
     <!-- Sección: DOM Modificar Texto de un Elemento -->
     <div class="box">
-        <h2>DOM Modificar Texto de un Elemento</h2>
+        <h2>5. DOM. MODIFICAR ELEMENTOS</h2>
         <a href="https://www.w3schools.com/js/js_htmldom_document.asp">javascript Modificar Elementos del DOM</a>
         <p>El DOM (Document Object Model) permite acceder y modificar el contenido de los elementos HTML. Puedes cambiar
             el texto de un elemento utilizando la propiedad <code>textContent</code>.</p>
@@ -274,7 +274,7 @@ function modificarTexto() {
 
     <!-- Sección: DOM modificar estilo de un elemento -->
     <div class="box">
-        <h2>DOM Modificar Estilo de un Elemento</h2>
+        <h2>5. DOM. MODIFICAR ESTILOS</h2>
         <a href="https://www.w3schools.com/js/js_htmldom_css.asp">javascript Modificar Estilos del DOM</a>
         <p>Puedes cambiar el estilo de un elemento mediante <code>style</code>. Ejemplo: cambiar color, ocultar o
             mostrar un elemento.</p>
@@ -316,7 +316,7 @@ document.getElementById("miCaja").style.display = "none";
 
     <!-- Sección: DOM Obtener Valores de un Formulario -->
     <div class="box">
-        <h2>DOM Obtener Valores de un Formulario</h2>
+        <h2>6. DOM Obtener Valores de un Formulario</h2>
         <a href="https://www.w3schools.com/jsref/dom_obj_text.asp">javascript DOM Input</a>
         <a href="https://www.w3schools.com/jsref/dom_obj_select.asp">javascript Select Input</a>
         <p>Para obtener valores de inputs o selects, puedes usar la propiedad <code>value</code> en JavaScript. A
@@ -373,7 +373,7 @@ document.getElementById("miCaja").style.display = "none";
 
     <!-- Sección: Condicionales -->
     <div class="box">
-        <h2>Condicionales</h2>
+        <h2>7. CONDICIONALES</h2>
         <a href="https://www.w3schools.com/js/js_if_else.asp">Condicionales</a>
         <p>Los condicionales permiten ejecutar código en función de condiciones. Usa <code>if</code>,
             <code>else if</code>, y <code>else</code>.
@@ -415,7 +415,7 @@ document.getElementById("miCaja").style.display = "none";
 
     <!-- Sección: Funciones con Parámetros y retorno -->
     <div class="box">
-        <h2>Funciones con Parámetros</h2>
+        <h2>8. FUNCIONES AVANZADAS.</h2>
         <p>Las funciones pueden aceptar parámetros, es decir, valores que puedes pasarles, y devolver resultados. Es
             util para separar la logica del DOM</p>
         <pre><code>function sumar(a, b) {
@@ -453,7 +453,7 @@ function mostarResultado() {
 
     <!-- Sección: Arrays -->
     <div class="box">
-        <h2>Arrays</h2>
+        <h2>9. ARRAYS</h2>
         <p>Los arrays son listas de valores. Puedes agregar, eliminar y ordenar elementos en un array.</p>
         <a href="https://www.w3schools.com/js/js_array_methods.asp">Arrays</a>
         <pre><code>
@@ -549,7 +549,7 @@ function mostarResultado() {
 
     <!-- Sección: Objetos -->
     <div class="box">
-        <h2>Objetos</h2>
+        <h2>10. OBJETOS</h2>
         <p>Los objetos son colecciones de pares clave-valor. Puedes modificarlos y acceder a sus valores.</p>
         <a href="https://www.w3schools.com/js/js_objects.asp">Objetos</a>
         <pre><code>
@@ -580,7 +580,7 @@ function mostarResultado() {
 
     <!-- Sección: Array de Objetos -->
     <div class="box">
-        <h2>Array de Objetos</h2>
+        <h2>11. ARRAYS DE OBJETOS</h2>
         <p>Un array puede contener objetos. Puedes agregar objetos y recorrerlos de forma similar a cualquier array.
             Puedes tambien ordenarlos por un campo de texto o de numero del objeto</p>
         <pre><code>
