--- a/ejemplos/5_funciones_basicas_eventos_dom/funcioneseventosdom.html
+++ b/ejemplos/5_funciones_basicas_eventos_dom/funcioneseventosdom.html
@@ -5,13 +5,15 @@
 
     <h1>Funciones, Eventos y Dom</h1>
 
-    <p id="parrafo">Parrafo</p>
+    
 
-    <button type="button" onclick="saludar()">SALUDAR</button>
-    <button type="button" onclick="despedir()">DESPEDIR</button>
-    <button type="button" onclick="cambiarColor()">CAMBIAR COLOR</button>
-    <button type="button" onclick="ocultar()">OCULTAR</button>
-    <button type="button" onclick="mostrar()">MOSTRAR</button>
+    <button onclick="saludar()">Saludar</button>
+    <button onclick="despedir()">Despedir</button>
+    <button onclick="cambiarColor()">Cambiar color</button>
+    <button onclick="ocultar()">Ocultar</button>
+    <button onclick="mostrar()">Mostrar</button>
+
+    <p id="parrafo">Parrafo</p>
 
 
     <script src="funcioneseventosdom.js"></script>
